--- a/index.html
+++ b/index.html
@@ -1996,7 +1996,7 @@ function triggerReward() {
     // Start wallet chew at the same time as card flies
     animateWallet();
 
-    // Reset toad counter and container
+    // ✅ Reset toad counter and container
     collectedToadCount = 0;
     if (toadContainer) toadContainer.innerHTML = '';
     updateToadBoxVisibility();
